# gedcom-explorer

./: .gitignore  README.md
backend/: app.py  gedcom_parser.py  models.py  pyproject.toml  routes.py  services.py
frontend/: index.html  package.json  tsconfig.json
frontend/src/: api.ts  main.ts  styles.css
